Make all response a model
