# api/docs/swagger.json
@@ -60,27 +60,27 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/notify.CallRequest"
+                            "$ref": "#/definitions/models.CallRequest"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Called",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.SuccessResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.BadRequestResponse"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/notify.ErrorResponse"
+                            "$ref": "#/definitions/models.NotifyErrorResponse"
                         }
                     }
                 }
@@ -106,7 +106,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.CreateUserRequest"
+                            "$ref": "#/definitions/models.CreateUserRequest"
                         }
                     }
                 ],
@@ -114,13 +114,13 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/user.CreateUserResponse"
+                            "$ref": "#/definitions/models.CreateUserResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.BadRequestResponse"
                         }
                     }
                 }
@@ -128,16 +128,16 @@
         }
     },
     "definitions": {
-        "models.HealthCheckResponse": {
+        "models.BadRequestResponse": {
             "type": "object",
             "properties": {
-                "status": {
+                "error": {
                     "type": "string",
-                    "example": "active"
+                    "example": "Bad Request"
                 }
             }
         },
-        "notify.CallRequest": {
+        "models.CallRequest": {
             "type": "object",
             "required": [
                 "text"
@@ -149,16 +149,7 @@
                 }
             }
         },
-        "notify.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "reason": {
-                    "type": "string",
-                    "example": "Token no longer valid"
-                }
-            }
-        },
-        "user.CreateUserRequest": {
+        "models.CreateUserRequest": {
             "type": "object",
             "required": [
                 "fcmToken"
@@ -170,7 +161,7 @@
                 }
             }
         },
-        "user.CreateUserResponse": {
+        "models.CreateUserResponse": {
             "type": "object",
             "properties": {
                 "apiKey": {
@@ -192,6 +183,32 @@
                 "userCreated": {
                     "type": "string",
                     "example": "2025-01-01T00:00:00Z"
+                }
+            }
+        },
+        "models.HealthCheckResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string",
+                    "example": "active"
+                }
+            }
+        },
+        "models.NotifyErrorResponse": {
+            "type": "object",
+            "properties": {
+                "reason": {
+                    "type": "string",
+                    "example": "Token no longer valid"
+                }
+            }
+        },
+        "models.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         }
